syntax = "proto3";

message Message {
    string ID = 1;
    int64 Timestamp = 2;
    bytes Content = 3;
}

message PublishRequest {
    repeated string Channels = 1;
    Message Message = 2;
}

message PublishResponse {
    map<string, string> IDs = 1;
}

message ConsumeRequest {
    string ClientID = 1;
    repeated string Channels  = 2;
    string Group = 3;
}

message AckRequest {
    string ID = 1;
}

message AckResponse {
}

message PingRequest {
    int64 Timestamp = 1;
}

message PingResponse {
}

message UnsubscribeRequest {
    string ClientID = 2;
    repeated string Topics = 3;
    string Group = 4;
}

message UnsubscribeResponse {
}

service GrpcEx {
    rpc Publish(PublishRequest) returns (PublishResponse);
    rpc Consume(ConsumeRequest) returns (stream Message);
    rpc Ack(AckRequest) returns (AckResponse);
    rpc Ping(PingRequest) returns (PingResponse);
    rpc Unsubscribe(UnsubscribeRequest) returns (UnsubscribeResponse);
}
